Enhance comments in GitHub Actions workflow
Updated comments for clarity and added context for environment variables.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: clipping
 on:
   schedule:
     - cron: '0 0 * * *'  # 한국 시간 매일 오전 9시 (UTC 00:00)
-  workflow_dispatch:      # 수동 실행 버튼
+  workflow_dispatch:      # 수동 실행 버튼 (테스트용)
 
 jobs:
   build:
@@ -22,12 +22,12 @@ jobs:
 
       - name: Run script
         env:
-          # 네이버 API 및 노션 토큰
+          # 환경 변수 전달 (GitHub Secrets에서 값을 가져옴)
           NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
           NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }}
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           
-          # 새롭게 추가된 4개의 데이터베이스 ID
+          # 4개의 데이터베이스 ID 전달
           DB_ID_MNO: ${{ secrets.DB_ID_MNO }}
           DB_ID_SUBSID: ${{ secrets.DB_ID_SUBSID }}
           DB_ID_FIN: ${{ secrets.DB_ID_FIN }}
