--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,25 @@
 name: News Clipping Automation
 
-# 실행 조건 설정
 on:
   schedule:
-    # 한국 시간(KST) 오전 9시 30분은 UTC 기준으로 00시 30분입니다.
+    # 한국 시간 오전 9시 30분 (UTC 00:30)
     - cron: '30 0 * * *'
-  # GitHub 사이트에서 직접 실행 버튼을 눌러 테스트할 수 있게 설정
-  workflow_dispatch:
+  workflow_dispatch: # 지금 즉시 수집하고 싶을 때 사용하는 수동 버튼
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1. 레포지토리의 코드를 가상 서버로 가져옴
       - uses: actions/checkout@v3
 
-      # 2. 파이썬 환경 설정
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # 3. 필요한 라이브러리 설치 (requests, beautifulsoup4 등)
       - name: Install dependencies
-        run: |
-          pip install requests beautifulsoup4
+        run: pip install requests beautifulsoup4
 
-      # 4. 파이썬 스크립트 실행
-      # GitHub Settings에서 등록한 Secrets 값을 환경 변수로 전달합니다.
       - name: Run news clipping script
         env:
           NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
