--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ on:
   schedule:
     # 한국 시간(KST) 오전 10시 = UTC 01:00
     - cron: '0 1 * * *'
-  # 지금 당장 결과를 확인하거나 수동으로 실행하고 싶을 때 사용
-  workflow_dispatch:
+  workflow_dispatch: # 이 구문이 있어야 'Run workflow' 버튼이 생깁니다.
 
 jobs:
   build:
